sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:12: error: not found: value bas
    deplace(bas,posi)
            ^